# actix-starter

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20250129062514_create_suers.up.sql
src/: db.rs  errors.rs  main.rs  pages.rs
src/api/: auth.rs  mod.rs  user.rs
src/db/: mod.rs
src/models/: user.rs
src/templates/: basic.rs  mod.rs  user.rs
src/utils/: config.rs  mod.rs  password.rs
templates/: base.html  profile.html
templates/auth/: login.html  signup.html
