[package]
name = "actix2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-identity = "0.8.0"
actix-web = "4.9.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "chrono", "uuid" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
thiserror = "1.0"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
rust-argon2 = "2.1.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
